--- a/README
+++ b/README
@@ -87,3 +87,51 @@ git revert 되돌아갈 해시
 git reset --hard --> 현재 커밋상태로 초기화(?)
 git revert  --no-commit 해시 --> 커밋하지 않고 revert하는것
 why? 다른 작업을 추가하고 함께 커밋할려고
+-------------------------------------------------
+
+Branch --> 다른차원으로 알아두기
+-프로젝트 하나 이상의 모습으로 관리할 때
+	eg) 실배포용, 테스트서버용, 새로운 시도용
+
+-여러 작업들이 독립적으로 진행될 때
+	- 각각의 차원에서 작업이 확정 된다면 메인차원에서 통합
+
+---------------------------------------------
+git branch 이름 --> '이름'이라는 브랜치 생성
+git branch --> 브랜치 목록 확인
+git switch 이름 --> '이름'으로 브랜치 이동
+git switch 이름 -c '이름' --> '이름'브랜치 생성과 동시에 그 브랜치로 이동
+git brach -d 이름 --> '이름'브랜치 삭제
+git branch -D 이름 --> '이름'브랜치 강제삭제
+-->다른 브랜치로 가져오지 않은 내용이 있는 브랜드 지울때(?)
+git branch -m 기존이름 새이름 --> 이름 변경할 때
+
+---------------------------------------------
+서로 다른 브랜치를 합친다?? --< 1.merge 2.rebase
+
+1. merge : 두 브랜치를 하나의 커밋으로 병합시킴
+-합병 전의 브랜치들의 사용 내역이 남아있음
+-merge도 하나의 커밋임
+-되돌리고 싶다면 merge하기 전 브랜치로 이동 후 reset 가능
+-merge 후 합병 당한 브랜치들은 삭제(git branch -d 이름)
+-순서
+	i)기준브랜치로 이동 		--> git switch 기준브랜치 이름
+	ii)합병 				--> git merge 합병당할 브랜치 이름
+	iii)합병당한 브랜치 이름 삭제	--> git branch -d 합병당한 브랜치 이름
+
+2. rebase : 합칠 브랜치를 기존의 브랜치에 이어 붙임
+-브랜치가 시각적으로 한 줄로 되어있으므로 깔끔해보임
+-합치기 전 브랜치 내역들이 삭제되므로 팀원과 공유된 커밋들에 대해서는 사용하지 않음
+-순서 
+i) 병합할 브랜치로 이동			--> git switch 병합할 브랜치 이름
+ii) 병합					--> git rebase 기준 브랜치 이름
+iii) 기준브랜치로 이동			--> git switch 기준 브랜치 이름
+iv) ??						--> git merge 병합한 브랜치 이름
+v) 합병당한 브랜치 이름 삭제		--> git branch -d 병합한 브랜치 이름
+
+-----------------------------------------------------------------
+브랜치간 충돌
+
+
+
+
